# loop

./: .gitignore  README.md  aggregator.py  app.py  docker-compose.yml  index.html  next.config.ts  package-lock.json  package.json  pyproject.toml  storage.py  tailwind.config.js  tsconfig.json  vercel.json
.github/workflows/: ci.yml
app/: database.py  llm.py  main.py
components/: CalendarPanel.tsx  CoachPanel.tsx  Layout.tsx  ProtocolPanel.tsx  Skeleton.tsx  SystemPanel.tsx
lib/: DataContext.tsx  data.ts  notifications.ts  onesignal.ts  session.ts  supabaseClient.ts
pages/: _app.tsx  index.tsx
prisma/: schema.prisma  seed.ts
public/: manifest.json  sw.js
src/: App.jsx  styles.css
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/health/: route.ts
src/loop/: __init__.py  captures.py  context_store.py  gemini_extractor.py  resolver.py
static/: index.html
styles/: globals.css
templates/: base.html  experiment_events.html  experiments.html  goals.html  index.html  observations.html
tests/: test_pipeline.py
