[project]
name = "loop"
version = "0.1.0"
description = "Context fact extraction and resolution pipeline"
authors = [{name = "Loop AI"}]
dependencies = [
    "requests>=2.31",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
